# rastro

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  run_tests.sh  sitemap.xml
.github/workflows/: release.yml  test.yml
developer_guide/: index.html
docs/: build.sh  index.md  requirements.txt
docs/en/: mkdocs.yml
docs/en/docs/: developer_guide.md  glossary.md  index.md  installation.md  roadmap.md
docs/en/docs/img/: icon.afdesign  logo-gold.afdesign
docs/en/docs/python_api/: constants.md  index.md  orbits.md
docs/en/docs/reference/: index.md
docs/en/docs/reference/orbits/: index.md  orbital_elements.md  two_body_problem.md
docs/en/docs/user_guide/: frames.md  index.md
docs/en/docs/user_guide/data/: eop.md  index.md
docs/en/docs/user_guide/orbits/: anomalies.md  fig_anomaly_true_eccentric.py  index.md  properties.md  two_body_problem.md
docs/en/docs/user_guide/time/: epoch.md  index.md
docs/en/javascript/: mathjax.js
docs/en/javascripts/: mathjax.js
docs/en/overrides/: main.html
docs/examples/: anomaly_eccentric_and_mean.py  anomaly_eccentric_and_mean.rs  anomaly_true_and_eccentric.py  anomaly_true_and_eccentric.rs  anomaly_true_and_mean.py  anomaly_true_and_mean.rs  apoapsis_properties.py  apoapsis_properties.rs  eop_c04_loading.py  eop_c04_loading.rs  eop_data_access.py  eop_data_access.rs  eop_loading.rs  eop_standard_loading.py  eop_standard_loading.rs  periapsis_properties.py
docs/figures/: fig_anomaly_eccentric_mean.py  fig_anomaly_true_eccentric.py  fig_anomaly_true_eccentric_2.py  fig_anomaly_true_mean.py  fig_orbital_period.py  fig_sun_synchronous_inclination.py  fig_ut1_utc_evolution.py
figures/: fig_anomaly_eccentric_mean.html  fig_anomaly_true_eccentric.html  fig_anomaly_true_mean.html  fig_orbital_period.html  fig_sun_synchronous_inclination.html  fig_ut1_utc_evolution.html
glossary/: index.html
img/: logo.afdesign
installation/: index.html
python_api/: index.html
python_api/constants/: index.html
python_api/orbits/: index.html
rastro/: Cargo.toml
rastro/data/: fluxtable.txt  sw19571001.txt
rastro/src/: constants.rs  coordinates.rs  eop.rs  frames.rs  lib.rs  orbits.rs  time.rs  transformations.rs  utils.rs
rastro/src/data/: eop.rs  mod.rs
rastro/test_assets/: iau2000A_c04_14.txt
rastro_python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
rastro_python/rastro/: __init__.py
rastro_python/rastro/cli/: __main__.py  eop.py
rastro_python/src/: constants.rs  eop.rs  lib.rs  orbits.rs  test.rs  time.rs
rastro_python/test/: conftest.py  test_constants.py  test_coordinates.py  test_eop.py  test_frames.py  test_orbits.py  test_test.py  test_time.py  test_transformations.py
rastro_python/test/assets/: iau2000A_finals_ab.txt
reference/: index.html
reference/orbits/: index.html
reference/orbits/orbital_elements/: index.html
reference/orbits/two_body_problem/: index.html
roadmap/: index.html
scripts/: make_docs.sh  run_tests.sh  set_python_version.py  set_version.sh  update_data.sh
search/: search_index.json
user_guide/: index.html
user_guide/constants/: index.html
user_guide/data/: index.html
user_guide/data/eop/: index.html
user_guide/orbits/: index.html
user_guide/orbits/anomalies/: index.html
user_guide/orbits/properties/: index.html
user_guide/time/: index.html
user_guide/time/epoch/: index.html
