[package]
name = "rastro"
version = "0.1.0"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A modern, fast, space dynamics library for research and engineering applications."
homepage = "https://github.com/duncaneddy/rastro"
repository = "https://github.com/duncaneddy/rastro"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsofa = {version = "^0.3.0"}
nalgebra = {version = "^0.25.3"}

[dev-dependencies]
approx = "^0.4.0"