[package]
name = "rastro"
version = "0.1.8"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2021"
description = """
A modern space dynamics library for research and engineering applications.
Designed to be high performance, easy to learn, and fast to code, and ready for flight.
"""
homepage = "https://https://duncaneddy.github.io/rastro/"
documentation = "https://docs.rs/rastro/"
repository = "https://github.com/duncaneddy/rastro/"
keywords = ["space", "astrodynamics", "satellite"]
categories = ["science"]
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsofa = "0.4.5"
nalgebra = "0.30.1"
ureq = "2.4.0"
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
approx = "0.5.0"
