[package]
name = "rastro_python"
version = "0.1.4"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rastro = { version = "^0.1.4" }
# rastro = { path = "../rastro" }

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]

[lib]
name = "rastro_python"
crate-type = ["cdylib"]